crates/cli/src/commands/snapshots/moon_cli__commands__project__tests__advanced_config.snap
---
source: crates/cli/src/commands/project.rs
assertion_line: 171
expression: get_assert_output(&assert)
---

[38;5;16m[48;5;111m[1m ADVANCED [0m

[38;5;248m[1mID[0m:[0m [38;5;111madvanced[0m
[38;5;248m[1mSource[0m:[0m [38;5;36madvanced[0m
[38;5;248m[1mType[0m:[0m Library
[38;5;248m[1mName[0m:[0m Advanced
[38;5;248m[1mDescription[0m:[0m Advanced example.
[38;5;248m[1mOwner[0m:[0m Batman
[38;5;248m[1mMaintainers[0m:[0m
 [38;5;239m-[0m Bruce Wayne
[38;5;248m[1mChannel[0m:[0m #batcave

[38;5;16m[48;5;15m[1m FILE GROUPS [0m

[38;5;248m[1msources[0m:[0m
 [38;5;239m-[0m [38;5;36msrc/**/*[0m
 [38;5;239m-[0m [38;5;36mtypes/**/*[0m
[38;5;248m[1mtests[0m:[0m
 [38;5;239m-[0m [38;5;36mtests/**/*[0m


