crates/cli/src/commands/snapshots/moon_cli__commands__project__tests__depends_on_paths.snap
---
source: crates/cli/src/commands/project.rs
expression: get_assert_output(&assert)

---

 [38;5;16m[48;5;111m[1m FOO [0m

 [38;5;249mID:[0m [38;5;111mfoo[0m
 [38;5;249mPath:[0m [38;5;36mdeps/foo[0m

 [38;5;16m[48;5;15m[1m DEPENDS ON [0m

  [38;5;238m-[0m [38;5;111mbar[0m [38;5;249m([0m[38;5;36mdeps/bar[0m[38;5;249m)[0m
  [38;5;238m-[0m [38;5;111mbaz[0m [38;5;249m([0m[38;5;36mdeps/baz[0m[38;5;249m)[0m

 [38;5;16m[48;5;15m[1m FILE GROUPS [0m

[38;5;249m sources:[0m
  [38;5;238m-[0m [38;5;36msrc/**/*[0m
  [38;5;238m-[0m [38;5;36mtypes/**/*[0m
[38;5;249m tests:[0m
  [38;5;238m-[0m [38;5;36mtests/**/*[0m


