crates/cli/src/commands/snapshots/moon_cli__commands__project__tests__empty_config.snap
---
source: crates/cli/src/commands/project.rs
assertion_line: 125
expression: get_assert_output(&assert)

---

[38;5;16m[48;5;111m[1m EMPTYCONFIG [0m

[38;5;248mID:[0m [38;5;111memptyConfig[0m
[38;5;248mSource:[0m [38;5;36mempty-config[0m

[38;5;16m[48;5;15m[1m FILE GROUPS [0m

[38;5;248msources:[0m
 [38;5;239m-[0m [38;5;36msrc/**/*[0m
 [38;5;239m-[0m [38;5;36mtypes/**/*[0m
[38;5;248mtests:[0m
 [38;5;239m-[0m [38;5;36mtests/**/*[0m


