crates/cli/src/commands/snapshots/moon_cli__commands__project__tests__no_config.snap
---
source: crates/cli/src/commands/project.rs
expression: get_assert_output(&assert)

---

 [38;5;16m[48;5;111m[1m NOCONFIG [0m

 [38;5;249mID:[0m [38;5;111mnoConfig[0m
 [38;5;249mSource:[0m [38;5;36mno-config[0m

 [38;5;16m[48;5;15m[1m FILE GROUPS [0m

[38;5;249m sources:[0m
  [38;5;238m-[0m [38;5;36msrc/**/*[0m
  [38;5;238m-[0m [38;5;36mtypes/**/*[0m
[38;5;249m tests:[0m
  [38;5;238m-[0m [38;5;36mtests/**/*[0m


