crates/cli/src/commands/snapshots/moon_cli__commands__project__tests__unknown_project.snap
---
source: crates/cli/src/commands/project.rs
expression: get_assert_stderr_output(&assert)

---

 [38;5;15m[48;5;161m[1m ERROR [0m No project has been configured with the ID [38;5;111munknown[0m. 


