crates/cli/src/commands/snapshots/moon_cli__commands__project__tests__with_tasks.snap
---
source: crates/cli/src/commands/project.rs
assertion_line: 196
expression: get_assert_output(&assert)
---

[38;5;16m[48;5;111m[1m TASKS [0m

[38;5;248m[1mID[0m:[0m [38;5;111mtasks[0m
[38;5;248m[1mSource[0m:[0m [38;5;36mtasks[0m

[38;5;16m[48;5;15m[1m TASKS [0m

[38;5;248m[1mlint[0m:[0m [38;5;183meslint --cache --report-unused-disable-directives[0m
[38;5;248m[1mtest[0m:[0m [38;5;183mjest --cache --color[0m

[38;5;16m[48;5;15m[1m FILE GROUPS [0m

[38;5;248m[1msources[0m:[0m
 [38;5;239m-[0m [38;5;36msrc/**/*[0m
 [38;5;239m-[0m [38;5;36mtypes/**/*[0m
[38;5;248m[1mtests[0m:[0m
 [38;5;239m-[0m [38;5;36mtests/**/*[0m


